# arc-operator-dac

./: .gitignore  CMakeLists.txt  Dockerfile  config.yml  docker-compose.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: main.yml  pull_request.yml
scripts/: requirements-deps.json  requirements-gen.txt  requirements.txt
src/starkware/committee/: CMakeLists.txt  setup.py
src/starkware/starkware_utils/: config_base.py
src/starkware/storage/: CMakeLists.txt  redis.cmake  redis_storage.py
